# OpenGL_journey

./: .gitignore  CMakeLists.txt  Jamroot.jam  README.md  start.bat
OPENGL_triangles_object/: OPENGL_triangles_object.sln
OPENGL_triangles_object/OPENGL_triangles_object/: OPENGL_triangles_object.vcxproj  OPENGL_triangles_object.vcxproj.filters  Source.cpp  color.hpp  point.hpp  shader.hpp  vertex.hpp  vertices.hpp
OPENGL_triangles_object/OPENGL_triangles_object/Debug/: vc141.idb
OPENGL_triangles_object/OPENGL_triangles_object/Debug/OPENGL_t.D64F3848.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OPENGL_triangles_object.lastbuildstate
OPENGL_triangles_object/OPENGL_triangles_object/Release/OPENGL_t.D64F3848.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OPENGL_triangles_object.lastbuildstate  OPENGL_triangles_object.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OPENGL_triangles_object/Release/: OPENGL_triangles_object.iobj  OPENGL_triangles_object.ipdb
OpenGL/: CMakeLists.txt
OpenGL/OpenGL/: CMakeLists.txt  OpenGL.cpp  OpenGL.hpp
OpenGL/common/headers/: color.hpp  point.hpp  vertex.hpp  vertices.hpp
OpenGL/common/src/: color.cpp  point.cpp  shader.cpp  vertex.cpp
OpenGL_3D-model/: input.cpp  main.cpp
OpenGL_3D-model/Debug/: OpenGL_3D-model.ilk  vc141.idb
OpenGL_3D-model/Debug/OpenGL_3D-model.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGL_3D-model.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OpenGL_RubicCube/: covers.txt  cube.txt  main.cpp  positions.txt
OpenGL_cube/: main.cpp
OpenGL_journey_visual/common/include/: color.hpp  triangle.hpp
OpenGL_journey_visual/common/src/: vector3d.cpp
OpenGL_polygon/: main.cpp
OpenGL_polygon/polygon/Debug/: polygon.ilk  vc141.idb
OpenGL_polygon/polygon/Debug/polygon.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  polygon.lastbuildstate
OpenGL_project/: glad.c  main.cpp
OpenGL_quad/: main.cpp
OpenGL_quad/OpenGL_quad/Debug/: vc141.idb
OpenGL_quad/OpenGL_quad/Debug/OpenGL_quad.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGL_quad.lastbuildstate
OpenGL_transforming-shape/: main.cpp
OpenGL_transforming-shape/OpenGL_transforming-shape/Debug/: OpenGL_transforming-shape.ilk  vc141.idb
OpenGL_transforming-shape/OpenGL_transforming-shape/Debug/OpenGL_t.9896134E.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGL_transforming-shape.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OpenGL_triangle/: CMakeLists.txt  Jamfile.jam  main.cpp
Resources/: cube.txt  cubesaligment.txt
common/: .Jamfile.jam.swp  CMakeLists.txt  Jamfile.jam
common/include/: animate.hpp  buffer.hpp  camera.hpp  color.hpp  cube.hpp  field.hpp  input.hpp  input_handling.hpp  keyboard.hpp  model.hpp  model_transform.hpp  opengl.hpp  point.hpp  polygon.hpp  quad.hpp  rubicCube.hpp  shader.hpp  shape.hpp  texture.hpp  triangle.h  triangle.hpp  vector2d.hpp  vector3d.hpp  vertex.hpp  vertices.hpp  window.hpp  worldspace.hpp
common/src/: animate.cpp  buffer.cpp  camera.cpp  color.cpp  cube.cpp  field.cpp  input.cpp  input_handling.cpp  model.cpp  model_transform.cpp  mouse.cpp  point.cpp  polygon.cpp  quad.cpp  rubicCube.cpp  shader.cpp  shape.cpp  texture.cpp  triangle.cpp  vector2d.cpp  vector3d.cpp  vertex.cpp  window.cpp  worldspace.cpp
